<resources>
    <string name="app_name">ScratchMinder</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="plusone">+1</string>
    <string name="minusone">-1</string>
    <string name="rejoin_game">Rejoin Game (original position)</string>
    <string name="rejoin_game_play_next">Rejoin Game (play next)</string>
    <string name="rejoin_game_play_last">Rejoin Game (play last)</string>
    <string name="add_player">Add Player</string>
    <string name="add_game">Add Game</string>
    <string name="title_activity_add_player">Add Player</string>
    <string name="action_settings">Settings</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="not_playing">Not Playing</string>
    <string name="total_score">Total score:</string>
    <string name="settings">Settings</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_player_chooser">Choose a player</string>
    <string name="title_activity_new_game">Add New Game</string>
    <string name="game_name_entry">Game Name (optional)</string>
    <string name="leave_table">Leave table temporarily</string>
    <string name="remove_from_game">Remove from game</string>
    <string name="edit">Edit</string>
    <string name="confirm_remove_title">Confirm removal</string>
    <string name="confirm_remove_text">Are you sure you want to PERMANENTLY remove the selected player?</string>
    <string name="confirm_remove_game_text">Are you sure you want to PERMANENTLY delete the selected game?</string>
    <string name="remove_game">Remove game</string>
    <string name="confirm_reset_game_title">Confirm reset</string>
    <string name="confirm_reset_game_text">Are you sure you want to reset all scores?</string>
    <string name="departed_players">Departed players</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string-array name="drawer_items">
        <item>Scoreboard</item>
        <item>League Play</item>
        <item>Player Roster</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_league_play">League Play</string>
    <string name="_dummy_number">0</string>
    <string name="_dummy_player_name">Lagoon Catamaran</string>
    <string name="_dummy_game_name">GameName</string>
    <string name="_dummy_date_span">2 femtoseconds ago</string>
    <string name="heading_player_ranking">Player Rankings</string>
    <string name="header_recent_games">Recent Games</string>
    <string name="no_rankings_yet">(no rankings yet)</string>
    <string name="no_games_yet">(no games yet)</string>
    <string name="no_leagues">No leagues set up yet. Please choose &quot;Add League&quot; from the actions menu to set up a league.</string>
    <string name="add_league">Add League</string>
    <string name="edit_league">Edit League</string>
    <string name="league_name_entry">League Name</string>
    <string name="title_activity_new_league">Add a new league</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="record_game">Record game</string>
    <string name="click_to_choose_loser">Click to choose loser</string>
    <string name="click_to_choose_winner">Click to choose winner</string>
    <string name="click_or_badge_to_choose_loser">Click or badge in to choose loser</string>
    <string name="click_or_badge_to_choose_winner">Click or badge in to choose winner</string>
    <string name="loser_label">"Loser: "</string>
    <string name="winner_label">"Winner: "</string>
    <string name="last_played">"Last Played: "</string>
    <string name="date">Date</string>
    <string name="recent_games_defeated">def.</string>
    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
    <string name="no_games_recorded_message">No games recorded. Record a game to see rankings.</string>
    <string name="no_games_recorded_history_message">No games recorded. Record a game to see history.</string>
    <string name="record_button">Record</string>
    <string name="help_text">
<![CDATA[ 
<h3>Icon Sources</h3>
<p><a href="http://www.large-icons.com/free-icons/boss.htm">Large Boss Icon Set</a> is by <a href="http://www.aha-soft.com">aha-soft</a>.</p>
<p>Buddy, Dress IT, and Persons icon sets by <a href="http://iconka.com">iconka</a>.</p>
<p>Animal Icons <a href="http://www.iconarchive.com/show/animal-icons-by-martin-berube.html">by Martin Berube</a>.</p>
<p>Pool ball icons by <a href="http://www.iconarchive.com/show/pool-ball-icons-by-barkerbaggies.html">barkerbaggies (Marc Heatley)</a>.</p>
<p>Monster Icons by <a href="http://www.iconshock.com/">IconShock</a>.</p>
<p>African Pets, Animal Toys, Art Toys, Creatures Variety, Creature Cutes, and Dinosaur icon sets by <a href="http://fasticon.com">fasticon</a>; used under license.</p>
<p>Buuf, SuperBuuf, UltraBuuf, MicroGant, MiniGant, and Osmu icon sets by <a href="http://mattahan.deviantart.com/">Mattahan</a>; licensed under Creative Commons.</p>
<h3>Other Graphics</h3>
<p>Font Awesome by Dave Gandy <a href="http://fontawesome.io">http://fontawesome.io</a>.</p>
<p>Standard Android action icons are reproduced from work created and <a href="http://code.google.com/policies.html">shared by the Android Open Source Project</a> and used according to terms described in <a href="http://creativecommons.org/licenses/by/2.5/">the Creative Commons 2.5 Attribution License</a>.</p>
<p>Action bar styles from <a href="http://jgilfelt.github.io/android-actionbarstylegenerator/">Jeff Gilfelt\'s Action Bar Style Generator</a>.</p>
<h3>Audio</h3>
<p>Scoreboard sound effects from <a href="http://www.freesfx.co.uk">http://www.freesfx.co.uk</a>. Fanfare from <a href="https://www.freesound.org/people/bone666138/sounds/198874/">bone666138 on freesound.org</a>.</p>
<h3>Software Licenses</h3>
<p>The following license terms apply to the JSkill library used for TrueSkill scores:</p>
<hr />
<pre>
The core ideas used in this nsp.JSkills project were described in 
"TrueSkill (TM): A Bayesian Skill Rating System" available at 
http://research.microsoft.com/apps/pubs/default.aspx?id=67956

The authors of the above paper have asked for a link to that article
as attribution in derived works.

Some concepts were based on sample F# code that was written by Ralf Herbrich
Copyright (c) 2007, 2008 Microsoft Research Ltd, available at
http://blogs.technet.com/apg/archive/2008/06/16/trueskill-in-f.aspx

All the C# code in this nsp.JSkills project is
Copyright (c) 2010 Jeff Moser <jeff@moserware.com>

All the Java code in this nsp.JSkills project is
Copyright (c) 2010 Nate Parsons <parsons.nate@gmail.com>
 
Redistribution and use in source and binary forms, with or without modification, are
permitted provided that the following conditions are met:

   1. Redistributions of source code must retain the above copyright notice, this list of
      conditions and the following disclaimer.

   2. Redistributions in binary form must reproduce the above copyright notice, this list
      of conditions and the following disclaimer in the documentation and/or other materials
      provided with the distribution.

THIS SOFTWARE IS PROVIDED BY NATE PARSONS ``AS IS\'\' AND ANY EXPRESS OR IMPLIED
WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL NATE PARSONS OR
CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

The views and conclusions contained in the software and documentation are those of the
authors and should not be interpreted as representing official policies, either expressed
or implied, of Jeff Moser or Nate Parsons.
</pre>
 ]]>
    </string>
    <string name="title_activity_help">Help/About</string>
    <string name="_dummy_long_text">Lorem ipsum etc.</string>
    <string name="help_about">Help/About</string>
    <string name="player_name_label">Name</string>
    <string name="player_tts_name_label">TTS name (if required)</string>
    <string name="player_colour_label">Colour</string>
    <string name="player_icon_label">Icon</string>
    <string name="player_roster">Player Roster</string>
    <string name="current_leader">Current Leader: </string>
    <string name="_dummy_league_name">8-ball</string>
    <string name="last_game">Last game played: </string>
    <string name="never_played">never</string>
    <string name="player_change_speak_text">%1$s; %2$d.</string>
    <string name="player_join_speak_text">%1$s has joined!</string>
    <string name="player_rejoin_speak_text">%1$s has rejoined.</string>
    <string name="player_leave_speak_text">%1$s has left.</string>
    <string name="player_remove_speak_text">%1$s has quit.</string>
    <string name="player_change_speak_text_verbose">%1$s is on %2$d.</string>
    <string name="player_join_speak_text_verbose">%1$s has joined the game!</string>
    <string name="player_rejoin_speak_text_verbose">%1$s has rejoined the game on %2$d.</string>
    <string name="player_leave_speak_text_verbose">%1$s has left on %2$d.</string>
    <string name="player_remove_speak_text_verbose">%1$s has quit the game, on %2$d!</string>
    <plurals name="commit_score_speech_text">
        <item quantity="one">%1$s: %3$d.</item>
        <item quantity="other">%1$s: %3$d.</item>
    </plurals>
    <string name="commit_score_zero_speech_text">%1$s: %3$d.</string>
    <plurals name="commit_score_speech_text_verbose">
        <item quantity="one">One point; %1$s moves to %3$d.</item>
        <item quantity="other">%2$d points; %1$s is now on %3$d.</item>
    </plurals>
    <string name="commit_score_zero_speech_text_verbose">No score; %1$s remains on %3$d.</string>
    <plurals name="next_player_speech_text">
        <item quantity="one">%1$s: one point.</item>
        <item quantity="other">%1$s: %2$d points.</item>
    </plurals>
    <string name="next_player_zero_speech_text">%1$s, no points.</string>
    <plurals name="next_player_speech_text_verbose">
        <item quantity="one">Next is %1$s, one point.</item>
        <item quantity="other">Next is %1$s, on %2$d points.</item>
    </plurals>
    <string name="next_player_zero_speech_text_verbose">Next is %1$s, yet to score.</string>
    <string name="change_score_speech_text">%2$d.</string>
    <string-array name="league_play_tabs">
        <item>Rankings</item>
        <item>Game History</item>
        <item>Graphs</item>
    </string-array>
    <string name="swap">Swap</string>
    <string name="register_badge_button">Register badge</string>
    <string name="title_activity_register_badge">Register badge</string>
    <string name="swipe_badge_to_register">Swipe your badge or card now to register.</string>
    <string name="status_waiting">Status: waiting for swipe</string>
    <string name="toggle_audio">Toggle audio on/off</string>
    <string name="rating_system">Rating system:</string>
    <string name="rating_system_trueskill">TrueSkill</string>
    <string name="rating_system_elo">Elo</string>
    <string name="head_to_head">Head-To-Head</string>
    <string name="player_stats_heading_opponent">Opponent</string>
    <string name="player_stats_heading_games">Games</string>
    <string name="player_stats_heading_wins">Wins</string>
    <string name="player_stats_heading_losses">Losses</string>
    <string name="player_stats_heading_delta">Δ</string>
    <string name="player_stats_heading_percent">%</string>
</resources>