<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_player"
        android:icon="@drawable/ic_action_add_group"
        android:showAsAction="ifRoom"
        android:title="@string/add_player">
    </item>
    <item
        android:id="@+id/audio_toggle"
        android:icon="@drawable/ic_action_volume_on"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_audio">
    </item>
    <item
        android:id="@+id/reset_scores"
        android:showAsAction="never"
        android:title="@string/reset_scores">
    </item>
    <item
        android:id="@+id/remove_game"
        android:showAsAction="never"
        android:title="@string/remove_game">
    </item>
    <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/settings">
    </item>

</menu>