<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scoringPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="3dp" >

    <TextView
        android:id="@+id/newGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/_dummy_game_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newGameName"
        android:ellipsize="end"
        android:text="@string/_dummy_player_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gameDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gameDateLabel"
        android:layout_toRightOf="@+id/gameDateLabel"
        android:text="@string/_dummy_date_span"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

     <TextView
         android:id="@+id/gameDateLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gameDescription"
         android:text="@string/last_played"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textSize="12sp" />
    
</RelativeLayout>
