<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:gravity="center_vertical" >


    <TextView
        android:id="@+id/leagueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_dummy_league_name"
        android:layout_alignTop="@+id/leagueIcon"
		android:layout_toRightOf="@+id/leagueIcon"        
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/leagueIcon"
        android:layout_width="@dimen/standard_icon_size"
        android:layout_height="@dimen/standard_icon_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/dino_blue"
        android:contentDescription="@null" />

        <TextView
        android:id="@+id/leagueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/leagueDateLabel"
        android:layout_toRightOf="@+id/leagueDateLabel"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingRight="3sp"
        android:textSize="12sp" />

     <TextView
         android:id="@+id/leagueDateLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/leagueName"
         android:layout_alignLeft="@+id/leagueName"
         android:text="@string/last_game"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textSize="12sp" />
</RelativeLayout>
