<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/winnerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#666"
            android:maxHeight="30dp"
            android:maxWidth="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/dino_blue"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/winnerName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666"
            android:text="@string/winner"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/defeatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_games_defeated"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/loserName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#666"
            android:gravity="right"
            android:text="@string/loser"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/primary_text_dark" />

        <ImageView
            android:id="@+id/loserIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#666"
            android:maxHeight="30dp"
            android:maxWidth="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/dino_blue"
            android:contentDescription="@null" />
    </LinearLayout>
        <TextView
            android:id="@+id/recentGameDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/tertiary_text_light" />
    
    
</LinearLayout>